--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@abw/react-one-louder",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "description": "Theme provider for React components",
   "type": "module",
   "files": [
     "dist"
@@ -13,12 +14,26 @@
       "require": "./dist/react-one-louder.umd.cjs"
     }
   },
+  "author": "Andy Wardley",
+  "licence": "MIT",
+  "keywords": [
+    "react",
+    "theme",
+    "provider"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:docs": "vite build --outDir docs --config vite.docs.config.js",
     "preview": "vite preview --outDir docs --config vite.docs.config.js",
     "test": "vitest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abw/react-one-louder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/abw/react-one-louder/issues"
   },
   "dependencies": {
     "react": "^18.2.0",
