--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:docs": "vite build --outDir docs --config vite.docs.config.js",
+    "build:docs": "vite build --outDir docs --config vite.docs.config.js && cp docs/index.html docs/404.html",
     "preview": "vite preview --outDir docs --config vite.docs.config.js",
     "test": "vitest"
   },
