--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:docs": "vite build --outDir docs --config vite.docs.config.js && cp docs/index.html docs/404.html",
+    "Xbuild:docs": "vite build --outDir docs --config vite.docs.config.js && cp docs/index.html docs/404.html",
+    "build:docs": "vite build --outDir docs --config vite.docs.config.js",
     "preview": "vite preview --outDir docs --config vite.docs.config.js",
     "test": "vitest"
   },
@@ -40,6 +41,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@abw/badger-timestamp": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
