--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.60.0",
     "vite": "^4.2.0",
+    "vite-plugin-svgr": "^2.4.0",
     "vitest": "^0.29.8"
   }
 }
