Migrated to typescript

--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "build:docs": "vite build --outDir docs --config vite.docs.config.js",
     "preview": "vite preview --outDir docs --config vite.docs.config.js",
-    "test": "vitest",
-    "lint": "eslint 'lib/**/*.{js,jsx}' 'src/**/*.{js,jsx}'"
+    "test": "vitest --ui",
+    "XXlint": "eslint 'lib/**/*.{js,jsx}' 'src/**/*.{js,jsx}'",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -36,26 +37,32 @@
   "bugs": {
     "url": "https://github.com/abw/react-one-louder/issues"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@abw/badger-timestamp": "^1.0.4",
-    "@abw/badger-utils": "^1.0.19",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.37.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@abw/badger-utils": "1.2.0-ts-beta3",
+    "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^2.1.8",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
     "jsdom": "^21.1.1",
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.60.0",
-    "vite": "^4.2.0",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.6",
     "vite-plugin-svgr": "^2.4.0",
-    "vitest": "^0.29.8"
+    "vitest": "^2.1.8"
   }
 }
