--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   ],
   "main": "./dist/react-one-louder.umd.cjs",
   "module": "./dist/react-one-louder.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/react-one-louder.js",
-      "require": "./dist/react-one-louder.umd.cjs"
+      "require": "./dist/react-one-louder.umd.cjs",
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/react-one-louder.js"
+      }
     }
   },
   "author": "Andy Wardley",
@@ -42,7 +46,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@abw/badger-timestamp": "^1.0.4",
+    "@abw/badger-timestamp": "^1.2.0",
     "@abw/badger-utils": "1.2.0-ts-beta3",
     "@eslint/js": "^9.17.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -62,6 +66,7 @@
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.6",
+    "vite-plugin-dts": "^4.4.0",
     "vite-plugin-svgr": "^2.4.0",
     "vitest": "^2.1.8"
   }
