--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "provider"
   ],
   "scripts": {
-    "dev": "vite",
+    "devX": "vite",
+    "dev": "vite --config vite.docs.js",
     "build": "$npm_execpath build:lib && $npm_execpath build:docs",
     "build:lib": "tsc -b && vite build",
     "build:docs": "vite build --config vite.docs.js",
@@ -47,9 +48,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@abw/badger-css": "^1.2.6",
+    "@abw/badger-icon": "^0.1.6",
+    "@abw/badger-react-ui": "^1.3.13",
     "@abw/badger-timestamp": "^1.2.0",
-    "@abw/badger-utils": "1.2.0-ts-beta3",
+    "@abw/badger-utils": "1.2.0",
+    "@abw/badger-website": "^0.2.6",
     "@eslint/js": "^9.17.0",
+    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.18",
@@ -63,12 +70,14 @@
     "jsdom": "^21.1.1",
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-mdx-code-props": "^3.0.1",
     "sass": "^1.60.0",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.6",
+    "vite-jsconfig-paths": "^2.0.1",
     "vite-plugin-dts": "^4.4.0",
-    "vite-plugin-svgr": "^2.4.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^2.1.8"
   }
 }
