variants() and new website

--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "provider"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:docs": "vite build --outDir docs --config vite.docs.config.js",
-    "preview": "vite preview --outDir docs --config vite.docs.config.js",
-    "test": "vitest",
+    "dev": "vite --config vite.docs.js",
+    "build": "$npm_execpath build:lib && $npm_execpath build:docs",
+    "build:lib": "&& vite build",
+    "build:docs": "vite build --config vite.docs.js",
+    "preview": "vite preview --config vite.docs.js",
+    "test": "vitest --ui",
     "lint": "eslint 'lib/**/*.{js,jsx}' 'src/**/*.{js,jsx}'"
   },
   "repository": {
@@ -41,21 +42,30 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@abw/badger-timestamp": "^1.0.4",
-    "@abw/badger-utils": "^1.0.19",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
+    "@abw/badger-css": "^1.2.6",
+    "@abw/badger-icon": "^0.1.6",
+    "@abw/badger-react-ui": "^1.3.13",
+    "@abw/badger-timestamp": "^1.2.0",
+    "@abw/badger-utils": "^1.2.0",
+    "@abw/badger-website": "^0.2.6",
+    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/rollup": "^3.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.1",
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-mdx-code-props": "^3.0.1",
     "sass": "^1.60.0",
-    "vite": "^4.2.0",
-    "vite-plugin-svgr": "^2.4.0",
-    "vitest": "^0.29.8"
+    "vite": "^6.0.6",
+    "vite-jsconfig-paths": "^2.0.1",
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^2.1.8"
   }
 }
