--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/lib/*":        ["./lib/*"],
+      "@/website/*":    ["./website/*"],
+      "@/styles/*":     ["./website/styles/*"],
+      "@/page/*":       ["./website/page/*"],
+      "@/site/*":       ["./website/site/*"],
+      "@/snippets/*":   ["./website/snippets/*"],
+      "@/svg/*":        ["./website/svg/*"],
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
