--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["lib/**/*"]
+  "include": ["lib/**/*", "test/**/*", "test/setup.ts"]
 }
