--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "url": "https://github.com/abw/react-one-louder/issues"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0 || ^19.0.0",
+    "react-dom": "^18.2.0 || ^19.0.0"
   },
   "devDependencies": {
     "@abw/badger-css": "^1.2.6",
