--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-router-dom": "^6.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-mdx-code-props": "^3.0.1",
-    "sass": "^1.60.0",
+    "sass": "=1.78.0",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.6",
